--- a/deno.jsonc
+++ b/deno.jsonc
@@ -6,6 +6,7 @@
   ],
   "imports": {
     "@deno/emit": "jsr:@deno/emit@^0.45.0",
+    "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.0",
     "@std/assert": "jsr:@std/assert@1",
     "@std/fs": "jsr:@std/fs@^1.0.5",
     "@std/io": "jsr:@std/io@^0.225.0",
