--- a/src/web/deno.jsonc
+++ b/src/web/deno.jsonc
@@ -1,6 +1,6 @@
 {
   "name": "@alexi/web",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "imports": {
     "@alexi/web/": "./",
     "esbuild": "npm:esbuild@^0.24.0",
@@ -18,6 +18,7 @@
     "./types": "./types.ts",
     "./urls": "./urls.ts",
     "./views": "./views.ts",
+    "./commands": "./commands/mod.ts",
     "./commands/collectstatic": "./commands/collectstatic.ts",
     "./commands/runserver": "./commands/runserver.ts"
   }
