--- a/src/web/deno.jsonc
+++ b/src/web/deno.jsonc
@@ -3,6 +3,7 @@
   "version": "0.1.2",
   "imports": {
     "@alexi/web/": "./",
+    "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.0",
     "esbuild": "npm:esbuild@^0.24.0",
     "nunjucks": "npm:nunjucks@^3.2.4"
   },
