--- a/src/firebase/deno.json
+++ b/src/firebase/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@alexi/firebase",
-  "version": "0.1.0",
+  "version": "0.1.5",
   "imports": {
     "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.0",
     "esbuild": "npm:esbuild@^0.24.0",
@@ -15,8 +15,10 @@
     "./commands/runemulators": "./commands/runemulators.ts",
     "./models": "./models/mod.ts",
     "./app": "./app.ts",
+    "./config": "./config.ts",
     "./functions": "./functions.ts",
     "./middlewares": "./middlewares.ts",
+    "./setup": "./setup.ts",
     "./transactions": "./transactions.ts"
   }
 }
