--- a/src/web/deno.jsonc
+++ b/src/web/deno.jsonc
@@ -1,9 +1,10 @@
 {
   "name": "@alexi/web",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "imports": {
     "@alexi/web/": "./",
     "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.0",
+    "@open-wc/dedupe-mixin": "npm:@open-wc/dedupe-mixin@1.4.0",
     "esbuild": "npm:esbuild@^0.24.0",
     "nunjucks": "npm:nunjucks@^3.2.4"
   },
@@ -13,7 +14,6 @@
     "./base_command": "./base_command.ts",
     "./config": "./config.ts",
     "./execute": "./execute.ts",
-    "./server": "./server.ts",
     "./setup": "./setup.ts",
     "./templates": "./templates.ts",
     "./types": "./types.ts",
