--- a/src/firebase/deno.json
+++ b/src/firebase/deno.json
@@ -1,8 +1,10 @@
 {
   "name": "@alexi/firebase",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "imports": {
     "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.0",
+    "@open-wc/dedupe-mixin": "npm:@open-wc/dedupe-mixin@1.4.0",
+    "@alexi/web": "jsr:@alexi/web@^0.1.4",
     "esbuild": "npm:esbuild@^0.24.0",
     "firebase": "npm:firebase@^11.0.2",
     "firebase-admin": "npm:firebase-admin@^13.0.0",
