--- a/src/web/deno.jsonc
+++ b/src/web/deno.jsonc
@@ -1,11 +1,12 @@
 {
   "name": "@alexi/web",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "imports": {
     "@alexi/web/": "./",
     "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.0",
     "@open-wc/dedupe-mixin": "npm:@open-wc/dedupe-mixin@1.4.0",
     "esbuild": "npm:esbuild@^0.24.0",
+    "esbuild-plugin-svg": "npm:esbuild-plugin-svg@^0.1.0",
     "nunjucks": "npm:nunjucks@^3.2.4"
   },
   "exports": {
