Deno KV db backend

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -16,6 +16,7 @@
     "lib": [
       "dom",
       "deno.ns",
+      "deno.unstable",
       "deno.window",
       "DOM.Iterable",
       "DOM.AsyncIterable"
