--- a/deno.jsonc
+++ b/deno.jsonc
@@ -12,6 +12,9 @@
     "@std/io": "jsr:@std/io@^0.225.0",
     "@std/path": "jsr:@std/path@^1.0.7"
   },
+  "tasks": {
+    "test": "deno test -A --no-check --unstable-kv"
+  },
   "compilerOptions": {
     "lib": [
       "dom",
