--- a/src/db/deno.jsonc
+++ b/src/db/deno.jsonc
@@ -3,7 +3,8 @@
   "version": "0.3.1",
   "imports": {
     "@alexi/web": "jsr:@alexi/web@^0.4.0",
-    "idb": "npm:idb@8.0.0"
+    "idb": "npm:idb@8.0.0",
+    "fake-indexeddb": "npm:fake-indexeddb@^6.0.0"
   },
   "exports": {
     "./backends": "./backends/mod.ts",
