Fix firestore multi update and delete bugs

--- a/src/db/deno.jsonc
+++ b/src/db/deno.jsonc
@@ -9,5 +9,8 @@
   "exports": {
     "./backends": "./backends/mod.ts",
     "./models": "./models/mod.ts"
+  },
+  "tasks": {
+    "test": "deno test -A --no-check --unstable-kv"
   }
 }
