--- a/deno.jsonc
+++ b/deno.jsonc
@@ -10,10 +10,8 @@
     "@std/assert": "jsr:@std/assert@1",
     "@std/fs": "jsr:@std/fs@^1.0.5",
     "@std/io": "jsr:@std/io@^0.225.0",
-    "@std/path": "jsr:@std/path@^1.0.7"
-  },
-  "tasks": {
-    "test": "deno test -A --no-check --unstable-kv"
+    "@std/path": "jsr:@std/path@^1.0.7",
+    "@std/testing": "jsr:@std/testing@^1.0.9"
   },
   "compilerOptions": {
     "lib": [
@@ -47,5 +45,6 @@
     "semiColons": true,
     "singleQuote": true,
     "indentWidth": 2
-  }
+  },
+  "nodeModulesDir": "none"
 }
