--- a/src/firebase/deno.json
+++ b/src/firebase/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@alexi/firebase",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "imports": {
     "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.1",
     "@open-wc/dedupe-mixin": "npm:@open-wc/dedupe-mixin@1.4.0",
@@ -23,5 +23,8 @@
     "./middlewares": "./middlewares.ts",
     "./setup": "./setup.ts",
     "./transactions": "./transactions.ts"
+  },
+  "tasks": {
+    "test": "firebase emulators:exec 'deno test -A --no-check'"
   }
 }
