--- a/src/staticfiles/deno.jsonc
+++ b/src/staticfiles/deno.jsonc
@@ -6,6 +6,6 @@
     "./commands": "./commands/mod.ts",
     "./finders": "./finders.ts",
     "./storage": "./storage.ts",
-    "./middleware": "./middleware.ts",
-  },
+    "./middleware": "./middleware.ts"
+  }
 }
