--- a/src/core/deno.jsonc
+++ b/src/core/deno.jsonc
@@ -3,6 +3,6 @@
   "version": "0.6.0",
   "exports": {
     ".": "./mod.ts",
-    "./commands": "./commands/mod.ts",
-  },
+    "./commands": "./commands/mod.ts"
+  }
 }
