feat: implement @alexi/create and startapp command
- Add @alexi/create package for project scaffolding
- Add startapp command for creating new apps
- Support 6 app types: cli, web, ui, desktop, mobile, library
- Generate settings files for entrypoint apps
- Generate type-specific templates and directory structure

Closes #9

--- a/deno.json
+++ b/deno.json
@@ -20,7 +20,8 @@
     "./webui/launcher": "./src/webui/launcher.ts",
     "./webui/bindings": "./src/webui/bindings.ts",
     "./capacitor": "./src/capacitor/mod.ts",
-    "./types": "./src/types/mod.ts"
+    "./types": "./src/types/mod.ts",
+    "./create": "./src/create/mod.ts"
   },
   "tasks": {
     "test": "deno test -A --unstable-kv --no-check",
