--- a/deno.json
+++ b/deno.json
@@ -49,7 +49,9 @@
     "@alexi/webui/bindings": "./src/webui/bindings.ts",
     "@alexi/capacitor": "./src/capacitor/mod.ts",
     "@std/assert": "jsr:@std/assert@1",
-    "@std/path": "jsr:@std/path@1"
+    "@std/path": "jsr:@std/path@1",
+    "esbuild": "npm:esbuild@^0.24.0",
+    "esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.1"
   },
   "lint": {
     "rules": {
@@ -75,11 +77,11 @@
   },
   "fmt": {
     "indentWidth": 2,
-    "lineWidth": 100,
     "singleQuote": false
   },
   "compilerOptions": {
     "strict": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "lib": ["deno.ns", "deno.window"]
   }
 }
