--- a/deno.json
+++ b/deno.json
@@ -7,6 +7,8 @@
     "./db": "./src/db/mod.ts",
     "./db/backends/denokv": "./src/db/backends/denokv/mod.ts",
     "./db/backends/indexeddb": "./src/db/backends/indexeddb/mod.ts",
+    "./db/backends/rest": "./src/db/backends/rest/mod.ts",
+    "./db/backends/sync": "./src/db/backends/sync/mod.ts",
     "./urls": "./src/urls/mod.ts",
     "./http": "./src/http/mod.ts",
     "./middleware": "./src/middleware/mod.ts",
@@ -36,6 +38,8 @@
     "@alexi/db": "./src/db/mod.ts",
     "@alexi/db/backends/denokv": "./src/db/backends/denokv/mod.ts",
     "@alexi/db/backends/indexeddb": "./src/db/backends/indexeddb/mod.ts",
+    "@alexi/db/backends/rest": "./src/db/backends/rest/mod.ts",
+    "@alexi/db/backends/sync": "./src/db/backends/sync/mod.ts",
     "@alexi/urls": "./src/urls/mod.ts",
     "@alexi/http": "./src/http/mod.ts",
     "@alexi/middleware": "./src/middleware/mod.ts",
