--- a/src/admin/deno.jsonc
+++ b/src/admin/deno.jsonc
@@ -1,6 +1,7 @@
 {
   "name": "@alexi/admin",
   "version": "0.6.0",
+  "license": "MIT",
   "exports": {
     ".": "./mod.ts",
     "./introspection": "./introspection.ts",
