--- a/src/capacitor/deno.jsonc
+++ b/src/capacitor/deno.jsonc
@@ -1,6 +1,7 @@
 {
   "name": "@alexi/capacitor",
   "version": "0.6.0",
+  "license": "MIT",
   "exports": {
     ".": "./mod.ts",
     "./commands": "./commands/mod.ts"
