--- a/src/create/deno.jsonc
+++ b/src/create/deno.jsonc
@@ -1,6 +1,7 @@
 {
   "name": "@alexi/create",
   "version": "0.6.0",
+  "license": "MIT",
   "exports": {
     ".": "./mod.ts",
     "./main": "./main.ts"
