--- a/src/http/deno.jsonc
+++ b/src/http/deno.jsonc
@@ -1,6 +1,7 @@
 {
   "name": "@alexi/http",
   "version": "0.6.0",
+  "license": "MIT",
   "exports": {
     ".": "./mod.ts",
     "./application": "./application.ts",
