--- a/src/middleware/deno.jsonc
+++ b/src/middleware/deno.jsonc
@@ -1,6 +1,7 @@
 {
   "name": "@alexi/middleware",
   "version": "0.6.0",
+  "license": "MIT",
   "exports": {
     ".": "./mod.ts",
     "./cors": "./cors.ts",
