--- a/src/restframework/deno.jsonc
+++ b/src/restframework/deno.jsonc
@@ -1,6 +1,7 @@
 {
   "name": "@alexi/restframework",
   "version": "0.6.0",
+  "license": "MIT",
   "exports": {
     ".": "./mod.ts",
     "./serializers": "./serializers/mod.ts",
