--- a/src/urls/deno.jsonc
+++ b/src/urls/deno.jsonc
@@ -1,6 +1,7 @@
 {
   "name": "@alexi/urls",
   "version": "0.6.0",
+  "license": "MIT",
   "exports": {
     ".": "./mod.ts",
     "./types": "./types.ts",
