--- a/src/views/deno.jsonc
+++ b/src/views/deno.jsonc
@@ -1,6 +1,7 @@
 {
   "name": "@alexi/views",
   "version": "0.6.0",
+  "license": "MIT",
   "exports": {
     ".": "./mod.ts",
     "./template": "./template.ts"
