--- a/src/webui/deno.jsonc
+++ b/src/webui/deno.jsonc
@@ -1,6 +1,7 @@
 {
   "name": "@alexi/webui",
   "version": "0.6.0",
+  "license": "MIT",
   "exports": {
     ".": "./mod.ts",
     "./launcher": "./launcher.ts",
