--- a/src/admin/deno.jsonc
+++ b/src/admin/deno.jsonc
@@ -1,6 +1,6 @@
 {
   "name": "@alexi/admin",
-  "version": "0.6.0",
+  "version": "0.6.3",
   "license": "MIT",
   "exports": {
     ".": "./mod.ts",
@@ -11,5 +11,16 @@
     "./views": "./views/admin_views.ts",
     "./app": "./app/app.ts"
   },
-  "tasks": {}
+  "imports": {
+    "@alexi/db": "jsr:@alexi/db@0.6.3",
+    "@alexi/types": "jsr:@alexi/types@0.6.3",
+    "@alexi/urls": "jsr:@alexi/urls@0.6.3",
+    "@alexi/core": "jsr:@alexi/core@0.6.3",
+    "@alexi/middleware": "jsr:@alexi/middleware@0.6.3",
+    "@alexi/restframework": "jsr:@alexi/restframework@0.6.3",
+    "@html-props/core": "jsr:@html-props/core@^1.0.0-beta.5",
+    "@html-props/built-ins": "jsr:@html-props/built-ins@^1.0.0-beta.5",
+    "@html-props/layout": "jsr:@html-props/layout@^1.0.0-beta.5",
+    "@std/assert": "jsr:@std/assert@1"
+  }
 }
