--- a/src/auth/deno.jsonc
+++ b/src/auth/deno.jsonc
@@ -1,9 +1,14 @@
 {
   "name": "@alexi/auth",
-  "version": "0.6.0",
+  "version": "0.6.3",
   "license": "MIT",
   "exports": {
     ".": "./mod.ts",
     "./commands": "./commands/mod.ts"
+  },
+  "imports": {
+    "@alexi/core": "jsr:@alexi/core@0.6.3",
+    "@alexi/db": "jsr:@alexi/db@0.6.3",
+    "@alexi/types": "jsr:@alexi/types@0.6.3"
   }
 }
