--- a/src/db/deno.jsonc
+++ b/src/db/deno.jsonc
@@ -1,6 +1,6 @@
 {
   "name": "@alexi/db",
-  "version": "0.6.0",
+  "version": "0.6.3",
   "license": "MIT",
   "exports": {
     ".": "./mod.ts",
@@ -8,10 +8,22 @@
     "./fields": "./fields/mod.ts",
     "./query": "./query/mod.ts",
     "./backends/denokv": "./backends/denokv/mod.ts",
-    "./backends/indexeddb": "./backends/indexeddb/mod.ts"
+    "./backends/indexeddb": "./backends/indexeddb/mod.ts",
+    "./backends/rest": "./backends/rest/mod.ts",
+    "./backends/sync": "./backends/sync/mod.ts"
+  },
+  "imports": {
+    "@alexi/types": "jsr:@alexi/types@0.6.3",
+    "@std/assert": "jsr:@std/assert@1"
   },
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext", "deno.ns", "deno.unstable"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext",
+      "deno.ns",
+      "deno.unstable"
+    ],
     "strict": true
   }
 }
