--- a/src/http/deno.jsonc
+++ b/src/http/deno.jsonc
@@ -1,18 +1,15 @@
 {
   "name": "@alexi/http",
-  "version": "0.6.0",
+  "version": "0.6.3",
   "license": "MIT",
   "exports": {
-    ".": "./mod.ts",
-    "./application": "./application.ts",
-    "./types": "./types.ts",
-    "./middleware": "./middleware/mod.ts"
+    ".": "./mod.ts"
   },
   "imports": {
-    "@alexi/urls": "../alexi_urls/mod.ts"
-  },
-  "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext", "deno.ns"],
-    "strict": true
+    "@alexi/core": "jsr:@alexi/core@0.6.3",
+    "@alexi/middleware": "jsr:@alexi/middleware@0.6.3",
+    "@alexi/views": "jsr:@alexi/views@0.6.3",
+    "@alexi/staticfiles": "jsr:@alexi/staticfiles@0.6.3",
+    "@alexi/urls": "jsr:@alexi/urls@0.6.3"
   }
 }
