--- a/src/middleware/deno.jsonc
+++ b/src/middleware/deno.jsonc
@@ -1,11 +1,11 @@
 {
   "name": "@alexi/middleware",
-  "version": "0.6.0",
+  "version": "0.6.3",
   "license": "MIT",
   "exports": {
-    ".": "./mod.ts",
-    "./cors": "./cors.ts",
-    "./logging": "./logging.ts",
-    "./error": "./error.ts"
+    ".": "./mod.ts"
+  },
+  "imports": {
+    "@alexi/types": "jsr:@alexi/types@0.6.3"
   }
 }
