--- a/src/restframework/deno.jsonc
+++ b/src/restframework/deno.jsonc
@@ -1,6 +1,6 @@
 {
   "name": "@alexi/restframework",
-  "version": "0.6.0",
+  "version": "0.6.3",
   "license": "MIT",
   "exports": {
     ".": "./mod.ts",
@@ -9,11 +9,8 @@
     "./routers": "./routers/mod.ts"
   },
   "imports": {
-    "@alexi/db": "../alexi_db/mod.ts",
-    "@alexi/urls": "../alexi_urls/mod.ts"
-  },
-  "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext", "deno.ns"],
-    "strict": true
+    "@alexi/db": "jsr:@alexi/db@0.6.3",
+    "@alexi/urls": "jsr:@alexi/urls@0.6.3",
+    "@std/assert": "jsr:@std/assert@1"
   }
 }
