--- a/src/staticfiles/deno.jsonc
+++ b/src/staticfiles/deno.jsonc
@@ -1,12 +1,16 @@
 {
   "name": "@alexi/staticfiles",
-  "version": "0.6.0",
+  "version": "0.6.3",
   "license": "MIT",
   "exports": {
     ".": "./mod.ts",
-    "./commands": "./commands/mod.ts",
-    "./finders": "./finders.ts",
-    "./storage": "./storage.ts",
-    "./middleware": "./middleware.ts"
+    "./commands": "./commands/mod.ts"
+  },
+  "imports": {
+    "@alexi/core": "jsr:@alexi/core@0.6.3",
+    "@alexi/types": "jsr:@alexi/types@0.6.3",
+    "@std/path": "jsr:@std/path@1",
+    "esbuild": "npm:esbuild@^0.24.0",
+    "esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.1"
   }
 }
