--- a/src/views/deno.jsonc
+++ b/src/views/deno.jsonc
@@ -1,9 +1,11 @@
 {
   "name": "@alexi/views",
-  "version": "0.6.0",
+  "version": "0.6.3",
   "license": "MIT",
   "exports": {
-    ".": "./mod.ts",
-    "./template": "./template.ts"
+    ".": "./mod.ts"
+  },
+  "imports": {
+    "@alexi/types": "jsr:@alexi/types@0.6.3"
   }
 }
