--- a/deno.json
+++ b/deno.json
@@ -72,7 +72,8 @@
     "@std/assert": "jsr:@std/assert@1",
     "@std/path": "jsr:@std/path@1",
     "esbuild": "npm:esbuild@^0.24.0",
-    "esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.1"
+    "esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.1",
+    "fake-indexeddb": "npm:fake-indexeddb@^6.0.0"
   },
   "lint": {
     "rules": {
