feat: Django-style INSTALLED_APPS with import specifiers
Implements #12 - Remove APP_PATHS and use Django-style INSTALLED_APPS

Changes:
- loadAppCommands() now supports import specifiers (e.g., @alexi/web)
- loadUrlPatterns() supports import specifiers for ROOT_URLCONF
- Added ./config exports to all packages with app.ts
- Added ./commands exports to packages with commands
- APP_PATHS is now optional and deprecated
- Updated AGENTS.md with new configuration format

INSTALLED_APPS can now use:
- Import specifiers: "@alexi/web", "jsr:@alexi/web"
- Relative paths: "./src/myapp"

The framework auto-detects the format based on prefix.
Legacy APP_PATHS still works but shows deprecation warning.

--- a/deno.json
+++ b/deno.json
@@ -20,6 +20,8 @@
     ".": "./src/mod.ts",
     "./core": "./src/core/mod.ts",
     "./db": "./src/db/mod.ts",
+    "./db/config": "./src/db/app.ts",
+    "./db/commands": "./src/db/commands/mod.ts",
     "./db/backends/denokv": "./src/db/backends/denokv/mod.ts",
     "./db/backends/indexeddb": "./src/db/backends/indexeddb/mod.ts",
     "./db/backends/rest": "./src/db/backends/rest/mod.ts",
@@ -27,16 +29,29 @@
     "./urls": "./src/urls/mod.ts",
     "./http": "./src/http/mod.ts",
     "./middleware": "./src/middleware/mod.ts",
+    "./middleware/config": "./src/middleware/app.ts",
     "./views": "./src/views/mod.ts",
+    "./views/config": "./src/views/app.ts",
     "./web": "./src/web/mod.ts",
+    "./web/config": "./src/web/app.ts",
+    "./web/commands": "./src/web/commands/mod.ts",
     "./staticfiles": "./src/staticfiles/mod.ts",
+    "./staticfiles/config": "./src/staticfiles/app.ts",
+    "./staticfiles/commands": "./src/staticfiles/commands/mod.ts",
     "./restframework": "./src/restframework/mod.ts",
     "./auth": "./src/auth/mod.ts",
+    "./auth/config": "./src/auth/app.ts",
+    "./auth/commands": "./src/auth/commands/mod.ts",
     "./admin": "./src/admin/mod.ts",
+    "./admin/config": "./src/admin/app.ts",
+    "./admin/urls": "./src/admin/urls.ts",
     "./webui": "./src/webui/mod.ts",
+    "./webui/config": "./src/webui/app.ts",
     "./webui/launcher": "./src/webui/launcher.ts",
     "./webui/bindings": "./src/webui/bindings.ts",
+    "./webui/commands": "./src/webui/commands/mod.ts",
     "./capacitor": "./src/capacitor/mod.ts",
+    "./capacitor/config": "./src/capacitor/app.ts",
     "./types": "./src/types/mod.ts",
     "./create": "./src/create/mod.ts"
   },
