--- a/src/admin/deno.jsonc
+++ b/src/admin/deno.jsonc
@@ -4,12 +4,13 @@
   "license": "MIT",
   "exports": {
     ".": "./mod.ts",
+    "./config": "./app.ts",
     "./introspection": "./introspection.ts",
     "./urls": "./urls.ts",
     "./options": "./options.ts",
     "./components": "./components/mod.ts",
     "./views": "./views/admin_views.ts",
-    "./app": "./app/app.ts"
+    "./app": "./app/app.ts",
   },
   "imports": {
     "@alexi/db": "jsr:@alexi/db@0.6.10",
@@ -21,6 +22,6 @@
     "@html-props/core": "jsr:@html-props/core@^1.0.0-beta.5",
     "@html-props/built-ins": "jsr:@html-props/built-ins@^1.0.0-beta.5",
     "@html-props/layout": "jsr:@html-props/layout@^1.0.0-beta.5",
-    "@std/assert": "jsr:@std/assert@1"
-  }
+    "@std/assert": "jsr:@std/assert@1",
+  },
 }
