--- a/src/views/deno.jsonc
+++ b/src/views/deno.jsonc
@@ -3,9 +3,10 @@
   "version": "0.6.10",
   "license": "MIT",
   "exports": {
-    ".": "./mod.ts"
+    ".": "./mod.ts",
+    "./config": "./app.ts",
   },
   "imports": {
-    "@alexi/types": "jsr:@alexi/types@0.6.10"
-  }
+    "@alexi/types": "jsr:@alexi/types@0.6.10",
+  },
 }
