style: fix formatting for CI

--- a/src/capacitor/deno.jsonc
+++ b/src/capacitor/deno.jsonc
@@ -5,10 +5,10 @@
   "exports": {
     ".": "./mod.ts",
     "./config": "./app.ts",
-    "./commands": "./commands/mod.ts",
+    "./commands": "./commands/mod.ts"
   },
   "imports": {
     "@alexi/core": "jsr:@alexi/core@0.6.10",
-    "@alexi/types": "jsr:@alexi/types@0.6.10",
-  },
+    "@alexi/types": "jsr:@alexi/types@0.6.10"
+  }
 }
