--- a/src/webui/deno.jsonc
+++ b/src/webui/deno.jsonc
@@ -7,10 +7,10 @@
     "./config": "./app.ts",
     "./launcher": "./launcher.ts",
     "./bindings": "./bindings.ts",
-    "./commands": "./commands/mod.ts",
+    "./commands": "./commands/mod.ts"
   },
   "imports": {
     "@alexi/core": "jsr:@alexi/core@0.6.10",
-    "@alexi/types": "jsr:@alexi/types@0.6.10",
-  },
+    "@alexi/types": "jsr:@alexi/types@0.6.10"
+  }
 }
