--- a/src/web/deno.jsonc
+++ b/src/web/deno.jsonc
@@ -5,12 +5,12 @@
   "exports": {
     ".": "./mod.ts",
     "./config": "./app.ts",
-    "./commands": "./commands/mod.ts",
+    "./commands": "./commands/mod.ts"
   },
   "imports": {
     "@alexi/core": "jsr:@alexi/core@0.6.10",
     "@alexi/db": "jsr:@alexi/db@0.6.10",
     "@alexi/types": "jsr:@alexi/types@0.6.10",
-    "@alexi/urls": "jsr:@alexi/urls@0.6.10",
-  },
+    "@alexi/urls": "jsr:@alexi/urls@0.6.10"
+  }
 }
