fix: move FlushCommand from db to core to avoid circular dependency
The @alexi/db package had FlushCommand which imported from @alexi/core,
but @alexi/core also imports from @alexi/db. This circular dependency
caused JSR publish to fail.

Solution: Move FlushCommand to @alexi/core/commands where it belongs
alongside other built-in commands like HelpCommand, TestCommand, etc.

--- a/src/db/deno.jsonc
+++ b/src/db/deno.jsonc
@@ -5,7 +5,6 @@
   "exports": {
     ".": "./mod.ts",
     "./config": "./app.ts",
-    "./commands": "./commands/mod.ts",
     "./models": "./models/mod.ts",
     "./fields": "./fields/mod.ts",
     "./query": "./query/mod.ts",
@@ -19,13 +18,7 @@
     "@std/assert": "jsr:@std/assert@1"
   },
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext",
-      "deno.ns",
-      "deno.unstable"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext", "deno.ns", "deno.unstable"],
     "strict": true
   }
 }
