--- a/src/core/deno.jsonc
+++ b/src/core/deno.jsonc
@@ -15,6 +15,6 @@
     "@std/path": "jsr:@std/path@1"
   },
   "compilerOptions": {
-    "lib": ["deno.ns", "deno.unstable"]
+    "lib": ["deno.ns", "deno.unstable", "dom", "dom.iterable", "esnext"]
   }
 }
