--- a/src/core/deno.jsonc
+++ b/src/core/deno.jsonc
@@ -1,20 +1,26 @@
 {
   "name": "@alexi/core",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "license": "MIT",
   "exports": {
     ".": "./mod.ts",
     "./commands": "./commands/mod.ts"
   },
   "imports": {
-    "@alexi/types": "jsr:@alexi/types@0.7.0",
-    "@alexi/db": "jsr:@alexi/db@0.7.0",
-    "@alexi/urls": "jsr:@alexi/urls@0.7.0",
-    "@alexi/middleware": "jsr:@alexi/middleware@0.7.0",
-    "@alexi/restframework": "jsr:@alexi/restframework@0.7.0",
+    "@alexi/types": "jsr:@alexi/types@0.7.1",
+    "@alexi/db": "jsr:@alexi/db@0.7.1",
+    "@alexi/urls": "jsr:@alexi/urls@0.7.1",
+    "@alexi/middleware": "jsr:@alexi/middleware@0.7.1",
+    "@alexi/restframework": "jsr:@alexi/restframework@0.7.1",
     "@std/path": "jsr:@std/path@1"
   },
   "compilerOptions": {
-    "lib": ["deno.ns", "deno.unstable", "dom", "dom.iterable", "esnext"]
+    "lib": [
+      "deno.ns",
+      "deno.unstable",
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ]
   }
 }
