--- a/src/db/deno.jsonc
+++ b/src/db/deno.jsonc
@@ -1,6 +1,6 @@
 {
   "name": "@alexi/db",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "license": "MIT",
   "exports": {
     ".": "./mod.ts",
@@ -14,11 +14,17 @@
     "./backends/sync": "./backends/sync/mod.ts"
   },
   "imports": {
-    "@alexi/types": "jsr:@alexi/types@0.7.0",
+    "@alexi/types": "jsr:@alexi/types@0.7.1",
     "@std/assert": "jsr:@std/assert@1"
   },
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext", "deno.ns", "deno.unstable"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext",
+      "deno.ns",
+      "deno.unstable"
+    ],
     "strict": true
   }
 }
