fix: add appPath to BundleConfig and fix workspace
- Add appPath optional field to BundleConfig interface
- Add admin and capacitor to workspace members

--- a/deno.json
+++ b/deno.json
@@ -12,8 +12,10 @@
     "./src/restframework",
     "./src/http",
     "./src/auth",
+    "./src/admin",
     "./src/web",
     "./src/webui",
+    "./src/capacitor",
     "./src/create"
   ],
   "exports": {
