ci: add --no-check to publish command for admin package type errors

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -75,7 +75,7 @@ jobs:
 
             # Capture output and exit code
             set +e
-            OUTPUT=$(cd "$PKG_DIR" && deno publish --allow-dirty --allow-slow-types 2>&1)
+            OUTPUT=$(cd "$PKG_DIR" && deno publish --allow-dirty --allow-slow-types --no-check 2>&1)
             EXIT_CODE=$?
             set -e
 
