--- a/src/webui/deno.jsonc
+++ b/src/webui/deno.jsonc
@@ -1,6 +1,6 @@
 {
   "name": "@alexi/webui",
-  "version": "0.8.5",
+  "version": "0.8.6",
   "license": "MIT",
   "exports": {
     ".": "./mod.ts",
@@ -10,7 +10,8 @@
     "./commands": "./commands/mod.ts"
   },
   "imports": {
-    "@alexi/core": "jsr:@alexi/core@0.8.5",
-    "@alexi/types": "jsr:@alexi/types@0.8.5"
+    "@alexi/core": "jsr:@alexi/core@0.8.6",
+    "@alexi/types": "jsr:@alexi/types@0.8.6",
+    "@webui/deno-webui": "jsr:@webui/deno-webui@^2.5.13"
   }
 }
