--- a/deno.json
+++ b/deno.json
@@ -59,7 +59,8 @@
     "check": "deno check src/**/mod.ts",
     "lint": "deno lint",
     "fmt": "deno fmt",
-    "version:sync": "deno run --allow-read --allow-write --allow-run scripts/sync-versions.ts"
+    "version:sync": "deno run --allow-read --allow-write --allow-run scripts/sync-versions.ts",
+    "install-hooks": "deno run --allow-read --allow-write --allow-run scripts/install-hooks.ts"
   },
   "imports": {
     "@alexi/types": "./src/types/mod.ts",
