feat(db): add unique field constraint validation to DenoKV and IndexedDB backends
- Add _validateUniqueFields() method to DenoKV backend
- Add _validateUniqueFields() method to IndexedDB backend
- Validate unique constraints on both insert and update operations
- Support case-insensitive uniqueness check for string fields
- Add test for unique field constraint validation
- Add debug logging to RestBackend execute method
- Update .gitignore to exclude test database files
- Bump version to 0.8.10

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ npm-debug.log*
 # Test
 coverage/
 .playwright/
+.test-db-*
 
 # Lock file (optional - uncomment if you want to ignore)
 # deno.lock
