--- a/src/db/deno.jsonc
+++ b/src/db/deno.jsonc
@@ -1,6 +1,6 @@
 {
   "name": "@alexi/db",
-  "version": "0.8.11",
+  "version": "0.8.12",
   "license": "MIT",
   "exports": {
     ".": "./mod.ts",
@@ -14,7 +14,8 @@
     "./backends/sync": "./backends/sync/mod.ts"
   },
   "imports": {
-    "@alexi/types": "jsr:@alexi/types@0.8.11",
+    "@alexi/core": "jsr:@alexi/core@0.8.12",
+    "@alexi/types": "jsr:@alexi/types@0.8.12",
     "@std/assert": "jsr:@std/assert@1"
   },
   "compilerOptions": {
