--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,9 +7,8 @@ on:
     branches: [main]
 
 jobs:
-  test:
+  lint:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -25,5 +24,39 @@ jobs:
       - name: Run linter
         run: deno lint
 
-      - name: Run tests
-        run: deno task test
+  unit-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Deno
+        uses: denoland/setup-deno@v2
+        with:
+          deno-version: v2.x
+
+      - name: Run unit tests
+        run: deno task test:unit
+
+  e2e-tests:
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Deno
+        uses: denoland/setup-deno@v2
+        with:
+          deno-version: v2.x
+
+      - name: Cache Deno dependencies
+        run: deno cache --unstable-kv src/create/tests/todo_e2e_test.ts
+
+      - name: Install Playwright browsers
+        run: deno run -A npm:playwright install chromium
+
+      - name: Run E2E tests
+        run: deno task test:e2e
+        env:
+          HEADLESS: "true"
