--- a/deno.json
+++ b/deno.json
@@ -56,6 +56,7 @@
   },
   "tasks": {
     "test": "deno test -A --unstable-kv --no-check",
+    "test:unit": "deno test -A --unstable-kv --no-check --ignore=src/create/tests/todo_e2e_test.ts",
     "test:scaffold": "deno test -A --unstable-kv --no-check src/create/tests/scaffold_test.ts",
     "test:e2e": "deno test -A --unstable-kv --no-check src/create/tests/todo_e2e_test.ts",
     "test:e2e:headed": "HEADLESS=false deno test -A --unstable-kv --no-check src/create/tests/todo_e2e_test.ts",
