--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,8 +36,14 @@ jobs:
       - name: Run linter
         run: deno lint
 
-      - name: Run tests
+      - name: Run unit tests
         run: deno task test:unit
+
+      - name: Install Playwright browsers
+        run: deno run -A npm:playwright install chromium
+
+      - name: Run E2E tests
+        run: deno task test:e2e
 
       - name: Find workspace packages
         id: find-packages
