fix(create): use main.ts as CLI entry point

--- a/src/create/deno.jsonc
+++ b/src/create/deno.jsonc
@@ -3,7 +3,8 @@
   "version": "0.20.0",
   "license": "MIT",
   "exports": {
-    ".": "./mod.ts"
+    ".": "./main.ts",
+    "./mod": "./mod.ts"
   },
   "imports": {
     "@alexi/core": "jsr:@alexi/core@0.20.0",
