feat(db): add PostgreSQL database backend (#67)
Add PostgreSQL backend implementation with full ORM support:

- PostgresBackend class with connection pooling via npm:pg
- PostgresQueryBuilder for QueryState → SQL translation
- PostgresSchemaEditor for DDL operations
- Support for connection strings and individual parameters
- Full CRUD, bulk operations, transactions, and aggregations
- 40 unit tests for query builder, 19 integration tests (skipped without DB)
- Compatible with Deno Deploy's managed PostgreSQL

--- a/src/db/deno.jsonc
+++ b/src/db/deno.jsonc
@@ -10,6 +10,7 @@
     "./query": "./query/mod.ts",
     "./backends/denokv": "./backends/denokv/mod.ts",
     "./backends/indexeddb": "./backends/indexeddb/mod.ts",
+    "./backends/postgres": "./backends/postgres/mod.ts",
     "./backends/rest": "./backends/rest/mod.ts",
     "./backends/sync": "./backends/sync/mod.ts"
   },
