refactor(db): remove SyncBackend completely (#79)
Remove SyncBackend and all references from the codebase.

Deleted:
- src/db/backends/sync/ (backend.ts, mod.ts)
- src/db/tests/sync_backend_test.ts

Updated:
- deno.json: removed sync backend exports
- src/db/deno.jsonc: removed sync backend export
- AGENTS.md: removed all SyncBackend documentation
- docs/db/backends.md: removed Sync Backend section
- src/db/setup.ts: removed SyncBackend examples from docstrings
- src/create/tests/e2e_utils.ts: removed sync import mapping
- src/create/templates/skills/alexi_db_skill_md.ts: removed SyncBackend refs
- skills/alexi-implement/SKILL.md: removed sync from backends list

Closes #34

--- a/src/db/deno.jsonc
+++ b/src/db/deno.jsonc
@@ -11,8 +11,7 @@
     "./backends/denokv": "./backends/denokv/mod.ts",
     "./backends/indexeddb": "./backends/indexeddb/mod.ts",
     "./backends/postgres": "./backends/postgres/mod.ts",
-    "./backends/rest": "./backends/rest/mod.ts",
-    "./backends/sync": "./backends/sync/mod.ts"
+    "./backends/rest": "./backends/rest/mod.ts"
   },
   "imports": {
     "@alexi/types": "jsr:@alexi/types@0.22.0",
