feat(storage): add Django-style Storage API with Firebase and Memory backends (#84) (#85)
- Add @alexi/storage module with abstract Storage base class
- Implement FirebaseStorage backend for Firebase Cloud Storage
- Implement MemoryStorage backend for testing
- Add FileField and ImageField to @alexi/db with validation support
- Add getStorage()/setStorage() configuration helpers
- Include 17 unit tests for Storage API
- Update documentation (AGENTS.md, django-comparison.md)

--- a/deno.json
+++ b/deno.json
@@ -9,6 +9,7 @@
     "./src/db",
     "./src/core",
     "./src/staticfiles",
+    "./src/storage",
     "./src/restframework",
     "./src/http",
     "./src/auth",
@@ -50,6 +51,9 @@
     "./webui/commands": "./src/webui/commands/mod.ts",
     "./capacitor": "./src/capacitor/mod.ts",
     "./capacitor/config": "./src/capacitor/app.ts",
+    "./storage": "./src/storage/mod.ts",
+    "./storage/backends/firebase": "./src/storage/backends/firebase.ts",
+    "./storage/backends/memory": "./src/storage/backends/memory.ts",
     "./types": "./src/types/mod.ts",
     "./create": "./src/create/mod.ts"
   },
@@ -87,6 +91,9 @@
     "@alexi/webui/launcher": "./src/webui/launcher.ts",
     "@alexi/webui/bindings": "./src/webui/bindings.ts",
     "@alexi/capacitor": "./src/capacitor/mod.ts",
+    "@alexi/storage": "./src/storage/mod.ts",
+    "@alexi/storage/backends/firebase": "./src/storage/backends/firebase.ts",
+    "@alexi/storage/backends/memory": "./src/storage/backends/memory.ts",
     "@std/assert": "jsr:@std/assert@1",
     "@std/path": "jsr:@std/path@1",
     "esbuild": "npm:esbuild@^0.24.0",
