feat(db): add migration system with deprecation-based rollbacks
Implement comprehensive migration system for Alexi with:

Core classes:
- Migration and DataMigration base classes with forwards/backwards methods
- MigrationSchemaEditor with deprecation operations (never delete data)
- MigrationLoader with dependency resolution and topological sort
- MigrationExecutor with --test mode (forward -> backward -> forward)
- MigrationRecorder and DeprecationRecorder for tracking state

Schema operations:
- createModel, deprecateModel, undeprecateModel, renameModel
- addField, deprecateField, undeprecateField, alterField, renameField
- addIndex, removeIndex
- runSQL for raw SQL (forwards + backwards)

Backend support:
- PostgresMigrationSchemaEditor for PostgreSQL
- DenoKVMigrationSchemaEditor for DenoKV
- .using(backend) pattern consistent with ORM

Commands:
- migrate (--to, --plan, --dry-run, --test, --cleanup)
- makemigrations (--name, --check, --dry-run)
- showmigrations (--plan, --deprecations)

Includes 22 passing unit tests.

Closes #92

--- a/src/db/deno.jsonc
+++ b/src/db/deno.jsonc
@@ -8,6 +8,9 @@
     "./models": "./models/mod.ts",
     "./fields": "./fields/mod.ts",
     "./query": "./query/mod.ts",
+    "./migrations": "./migrations/mod.ts",
+    "./migrations/schema": "./migrations/schema/mod.ts",
+    "./commands": "./commands/mod.ts",
     "./backends/denokv": "./backends/denokv/mod.ts",
     "./backends/indexeddb": "./backends/indexeddb/mod.ts",
     "./backends/postgres": "./backends/postgres/mod.ts",
@@ -15,6 +18,7 @@
   },
   "imports": {
     "@alexi/types": "jsr:@alexi/types@0.22.0",
+    "@alexi/core": "jsr:@alexi/core@0.22.0",
     "@std/assert": "jsr:@std/assert@1"
   },
   "compilerOptions": {
