--- a/src/core/deno.jsonc
+++ b/src/core/deno.jsonc
@@ -9,6 +9,8 @@
   "imports": {
     "@alexi/types": "jsr:@alexi/types@0.23.0",
     "@alexi/db": "jsr:@alexi/db@0.23.0",
+    "@alexi/db/migrations": "jsr:@alexi/db@0.23.0/migrations",
+    "@alexi/db/migrations/schema": "jsr:@alexi/db@0.23.0/migrations/schema",
     "@alexi/urls": "jsr:@alexi/urls@0.23.0",
     "@alexi/middleware": "jsr:@alexi/middleware@0.23.0",
     "@alexi/restframework": "jsr:@alexi/restframework@0.23.0",
