--- a/src/restframework/deno.jsonc
+++ b/src/restframework/deno.jsonc
@@ -10,6 +10,7 @@
   },
   "imports": {
     "@alexi/db": "jsr:@alexi/db@0.23.0",
+    "@alexi/middleware": "jsr:@alexi/middleware@0.23.0",
     "@alexi/urls": "jsr:@alexi/urls@0.23.0",
     "@std/assert": "jsr:@std/assert@1"
   }
