feat(restframework): add authentication_classes and JWTAuthentication (#102)
Implements DRF-style two-step auth for ViewSets: authentication_classes
populates context.user before permission_classes are checked, so
IsAuthenticated and other permission classes work in practice.

- Add BaseAuthentication abstract class and JWTAuthentication (HS256 + unsigned)
- Add performAuthentication() to ViewSet, called in asView() before checkPermissions()
- Export ./authentication subpath from @alexi/restframework
- Add 22 tests covering JWT verification and ViewSet integration
- Update AGENTS.md docs and e2e_utils.ts for new subpath

--- a/src/restframework/deno.jsonc
+++ b/src/restframework/deno.jsonc
@@ -4,6 +4,7 @@
   "license": "MIT",
   "exports": {
     ".": "./mod.ts",
+    "./authentication": "./authentication/mod.ts",
     "./serializers": "./serializers/mod.ts",
     "./viewsets": "./viewsets/mod.ts",
     "./routers": "./routers/mod.ts"
