feat(admin): add MPA infrastructure - static files, base template, static serving
- Add src/admin/static/css/admin.css: consolidated admin stylesheet with
  Django-style variables, layout, forms, tables, responsive styles, login
  box, and HTMX indicator classes (~1000 lines)
- Add src/admin/static/js/admin.js: JWT interceptor for HTMX requests,
  HX-Redirect handler, and window.adminAuth helpers (~40 lines)
- Add src/admin/templates/mpa/base.ts: baseTemplate() and loginTemplate()
  functions returning full HTML strings with HTMX CDN, CSS/JS links,
  header, sidebar nav, and main content area
- Add static file route to createAdminUrls() in admin_views.ts: serves
  admin.css and admin.js from /admin/static/* using import.meta.url
- Add ./templates/mpa export to deno.jsonc

Closes #124

--- a/src/admin/deno.jsonc
+++ b/src/admin/deno.jsonc
@@ -10,7 +10,8 @@
     "./options": "./options.ts",
     "./components": "./components/mod.ts",
     "./views": "./views/admin_views.ts",
-    "./app": "./app/app.ts"
+    "./app": "./app/app.ts",
+    "./templates/mpa": "./templates/mpa/base.ts"
   },
   "imports": {
     "@alexi/db": "jsr:@alexi/db@0.24.6",
