fix(admin): fix change form 404 and add E2E tests
Fixes admin change form returning 404 when navigating from the changelist
(issue #156). Adds Playwright E2E tests for the admin panel (issue #157).

Changes:
- fetchInstance and saveInstance now resolve the PK field name dynamically
  using getModelFields() instead of hardcoding id, fixing 404s for models
  with non-integer or non-id primary keys
- fetchInstance now logs ORM errors instead of silently swallowing them
- urlPrefix is normalised (leading slash, no trailing slash) in all 5 admin
  view files to prevent redirect loops on non-standard prefix configurations
- changelist_views: listDisplayLinks falls back to first computed column
  when modelAdmin.listDisplay is empty, ensuring rows are always clickable
- deno.json: admin E2E test excluded from test:unit task
- New: src/admin/tests/admin_e2e_server.ts — in-process Deno.serve server
- New: src/admin/tests/admin_e2e_test.ts — 7 Playwright E2E tests

Closes #156
Closes #157

--- a/deno.json
+++ b/deno.json
@@ -61,11 +61,13 @@
   },
   "tasks": {
     "test": "deno test -A --unstable-kv --no-check",
-    "test:unit": "deno test -A --unstable-kv --no-check --ignore=src/create/tests/todo_e2e_test.ts",
+    "test:unit": "deno test -A --unstable-kv --no-check --ignore=src/create/tests/todo_e2e_test.ts,src/admin/tests/admin_e2e_test.ts",
     "test:scaffold": "deno test -A --unstable-kv --no-check src/create/tests/scaffold_test.ts",
     "test:e2e": "deno test -A --unstable-kv --no-check src/create/tests/todo_e2e_test.ts",
     "test:e2e:headed": "HEADLESS=false deno test -A --unstable-kv --no-check src/create/tests/todo_e2e_test.ts",
     "test:create": "deno test -A --unstable-kv --no-check src/create/tests/",
+    "test:admin:e2e": "deno test -A --unstable-kv --no-check src/admin/tests/admin_e2e_test.ts",
+    "test:admin:e2e:headed": "HEADLESS=false deno test -A --unstable-kv --no-check src/admin/tests/admin_e2e_test.ts",
     "playwright:install": "npx playwright install chromium",
     "check": "deno check src/**/mod.ts",
     "lint": "deno lint",
