--- a/src/admin/deno.jsonc
+++ b/src/admin/deno.jsonc
@@ -1,6 +1,6 @@
 {
   "name": "@alexi/admin",
-  "version": "0.25.3",
+  "version": "0.25.4",
   "license": "MIT",
   "exports": {
     ".": "./mod.ts",
@@ -11,12 +11,12 @@
     "./templates/mpa": "./templates/mpa/base.ts"
   },
   "imports": {
-    "@alexi/db": "jsr:@alexi/db@0.25.3",
-    "@alexi/types": "jsr:@alexi/types@0.25.3",
-    "@alexi/urls": "jsr:@alexi/urls@0.25.3",
-    "@alexi/core": "jsr:@alexi/core@0.25.3",
-    "@alexi/middleware": "jsr:@alexi/middleware@0.25.3",
-    "@alexi/restframework": "jsr:@alexi/restframework@0.25.3",
-    "@std/assert": "jsr:@std/assert@1"
+    "@alexi/db": "jsr:@alexi/db@0.25.4",
+    "@alexi/types": "jsr:@alexi/types@0.25.4",
+    "@alexi/urls": "jsr:@alexi/urls@0.25.4",
+    "@alexi/core": "jsr:@alexi/core@0.25.4",
+    "@alexi/middleware": "jsr:@alexi/middleware@0.25.4",
+    "@alexi/restframework": "jsr:@alexi/restframework@0.25.4",
+    "@std/assert": "jsr:@std/assert@^1.0.19"
   }
 }
