feat(staticfiles,web): embed HTML templates into SW bundles and load them server-side
- bundle command: scan all installed apps' templatesDir dirs at build time
  and embed templates into Service Worker bundles via a virtual esbuild module
  (alexi:templates) that calls templateRegistry.register() for each file
- runserver command: scan installed apps' templatesDirs at startup and
  populate templateRegistry so templateView with templateName works
  without per-request filesystem access
- export resolveTemplatesDir, scanTemplatesDir, collectAllTemplates, and
  generateTemplatesModule helpers for testability
- add 17 unit tests covering all template scanning and module generation paths

--- a/src/web/deno.jsonc
+++ b/src/web/deno.jsonc
@@ -11,6 +11,7 @@
     "@alexi/core": "jsr:@alexi/core@0.25.6",
     "@alexi/db": "jsr:@alexi/db@0.25.6",
     "@alexi/types": "jsr:@alexi/types@0.25.6",
-    "@alexi/urls": "jsr:@alexi/urls@0.25.6"
+    "@alexi/urls": "jsr:@alexi/urls@0.25.6",
+    "@alexi/views": "jsr:@alexi/views@0.25.6"
   }
 }
